# Smart-Manufacturing-Machines-Efficiency-Prediction

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: data_ingestion_config.py  paths_config.py
src/: data_ingestion.py  data_processing.py
utils/: helpers.py
